2006-08-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* worker/RSS.NET.dll: updated.

2006-08-02  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* worker/bloggers.xml: Got a new blog.

2006-07-19  Aaron Bockover  <abock@gnome.org>

	* worker/bloggers.xml:
	* www/images/heads/jtickle.png: Added jtickle's hackergotchi

2006-07-13  Aaron Bockover  <abock@gnome.org>

	* www/images/heads/abock.png: Updated to my new hackergotchi

2006-06-06  Mark Crichton <crichton@gimp.org>

	* worker/bloggers.xml: Fixed my blog entries
	* www/images/heads/crichtma.png: And a headshot... that isn't fake!

2006-04-04  Alexandre Gomes  <alexmipego@gmail.com>

	* worker/bloggers.xml: Updated my feed url to feed only Mono category
	posts.

2006-02-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* worker/monologue-worker.cs: handle non-absolute 'Location'
	properly.

2006-02-02  Jonathan Pryor  <jonpryor@vt.edu>

	* www/images/heads/jonpryor.png: Use a transparent background.

2006-02-02  Jonathan Pryor  <jonpryor@vt.edu>

	* workers/bloggers.xml: Add my feed.
	* www/images/heads/jonpryor.png: Add my hackergotchi.

2006-01-18  Alexandre Gomes  <alexmipego@gmail.com>

	* worker/bloggers.xml: Updated my feed url.

2006-01-18  Ankit Jain  <jankit@novell.com>

	* worker/bloggers.xml: Added my feed.

2005-12-09 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* worker/monologue-worker.cs: fixes odd problem that caused the
	hashtable mapping from id to data not to be created.
	* worker/RSS.NET.dll: updated.

2005-11-25  Jonathan Chambers  <jonathan.chambers@ansys.com>
	* worker/bloggers.xml: Added my feed

2005-11-15  Rafael Teixeira  <rafaelteixeirabr@hotmail.com>
	* worker/bloggers.xml, www/images/heads/monoman.png:
		Add my head pic with a kitten

2005-11-15  Massimiliano Mantione  <massi@ximian.com>

	* worker/bloggers.xml
	  www/images/heads/massi-hackergotchi.png:
		Add my hackergotchi

2005-11-08  Aaron Bockover  <aaron@aaronbock.net>

	* worker/bloggers.xml: Updated my feed... again
